# buzz-video-research

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  render-env-vars.txt  render-internal-env-vars.txt
.github/workflows/: ci.yml
backend/: render.yaml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py  schemas.py
backend/app/core/: __init__.py  security.py  supabase.py
backend/app/routers/: __init__.py  admin.py  analyze.py  auth.py  health.py  search.py  subscription.py  webhook.py
backend/app/services/: __init__.py  admin_service.py  analyze_service.py  auth_service.py  paypal_service.py  subscription_service.py  youtube_service.py
docs/: SCOPE_PROGRESS.md  SMTP_SETUP.md  e2e-best-practices.md  production_diagnosis_final_report.html  production_diagnosis_report.html  production_diagnosis_report_2026-01-12.html  prometheus-alerts.yml  requirements.md  upgrade_plan_starlette.md
docs/YouTube自動企画作成ツール/docs/: SCOPE_PROGRESS.md
docs/e2e-specs/: search-e2e.md  video-detail-e2e.md
docs/e2e-test-history/: passed-tests.md
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend-internal/: index.html
frontend-internal/assets/: index-AhQUPBx_.js  index-CwQ4H33J.css
frontend/src/: App.tsx  index.css
playwright-report/: index.html
supabase/migrations/: 001_initial_schema.sql  002_add_search_cache.sql
test_venv/: pyvenv.cfg
tests/e2e/: search.spec.ts  video-detail.spec.ts
(+33 files in other folders)
