[project]
name = "buzz-video-research"
version = "0.1.0"
description = "バズり動画究極リサーチシステム - YouTubeバズ動画自動収集・影響力分析ツール"
requires-python = ">=3.12"

[tool.black]
line-length = 120
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
